ceph-export-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
 namespace: kube-monitor
 name: ceph-exporter
 labels:
  name: ceph-exporter
spec:
 replicas: 1
 selector:
  matchLabels:
    app: ceph-exporter
 strategy:
   type: Recreate
 template:
  metadata:
   labels:
    app: ceph-exporter
  spec:
   containers:
   - name: ceph-exporter
     image: harbor.cdd.group/platform/ceph_exporter:2.0.0
     #image: digitalocean/ceph_exporter:2.0.0
     imagePullPolicy: IfNotPresent
     resources:
     ports:
     - containerPort: 9128
     volumeMounts:
       - mountPath: /etc/ceph
         name: ceph-config
   volumes:
   - name: ceph-config
     hostPath:
       path: /etc/ceph
