grafana-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana-core
  namespace: monitoring
  labels:
    app: grafana-core
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana-core
    spec:
      nodeSelector:
        LB: grafana                       #这里打标签了！得落到指定的机器上才能数据持久化！kubectl label nodes 192.168.10.1  LB=grafana
      containers:
      - image: harbor.cdd.group/platform/grafana:4.2.0
        name: grafana-core
        imagePullPolicy: IfNotPresent
        # env:
        #resources:
        #  limits:
        #    cpu: 100m
        #    memory: 100Mi
        #  requests:
        #    cpu: 100m
        #    memory: 100Mi
        readinessProbe:
          httpGet:
            path: /login
            port: 3000
          # initialDelaySeconds: 30
          # timeoutSeconds: 1
        volumeMounts:
        - name: grafana-data
          mountPath: /var/lib/grafana/
      volumes:                    #这里使用了hostPath方式存储数据临时方案
        - name: grafana-data
          hostPath:
            path: /tmp
            type: Directory
         
#          cephfs:
#            monitors:
#            - '192.168.10.1:6789'
#            - '192.168.10.2:6789'
#            - '192.168.10.3:6789'
#            path: /kube-data/kube-monitor/grafana-data
#            user: admin
#            secretFile: /etc/ceph/cephfs-key
#            readOnly: false
