ceph-export-service.yaml
apiVersion: v1
kind: Service
metadata:
 namespace: kube-monitor
 name: ceph-exporter
spec:
 ports:
 - port: 9128
   targetPort: 9128
 selector:
  app: ceph-exporter
# clusterIP: 172.29.10.110
