grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-core
  namespace: monitoring
  labels:
    app: grafana-core
spec:
  type: NodePort
  ports:
    - port: 3000
      nodePort: 30001
  selector:
    app: grafana-core
